dsl/tree-sitter-logicpilot/test/corpus/literals_comments.txt
==================
Line comment before and after declarations
==================

// a leading line comment
model M {
  // resource comment
  resource R { capacity = 1 }
} // trailing comment
---

(source_file
  (comment)
  (model_declaration
    name: (identifier)
    body: (model_body
      (comment)
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (field
            name: (identifier)
            value: (value
              (value_literal
                (integer))))))))
  (comment))

==================
Block comment around a field
==================

model M {
  resource R {
    /* machine pool */
    capacity = 4
    /* per-unit failure probability */
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (comment)
          (field
            name: (identifier)
            value: (value
              (value_literal
                (integer))))
          (comment))))))

==================
Block comment containing stars and slashes
==================

/* ** stars ** and / slashes / inside */
model M {}
---

(source_file
  (comment)
  (model_declaration
    name: (identifier)
    body: (model_body)))

==================
Comments inside distribution argument lists
==================

model M {
  process P {
    service S {
      time = normal(10 /* mean */, 2 /* stddev */)
    }
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (integer)
                      (comment)
                      (integer))
                    (comment)))))))))))

==================
String literal field value
==================

model M {
  process P {
    queue Q { capacity = 5 ordering = "fifo" }
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (value_literal
                    (integer))))
              (field
                name: (identifier)
                value: (value
                  (value_literal
                    (string_literal)))))))))))
