dsl/tree-sitter-logicpilot/test/corpus/process_stages.txt
==================
Source with poisson integer arrival
==================

model M {
  process P {
    source Order {
      arrival = poisson(5)
    }
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (integer))))))))))))

==================
Source with rate float arrival
==================

model M {
  process P {
    source Clients { arrival = rate(2.5) }
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (float))))))))))))

==================
Queue with zero capacity
==================

model M {
  process P {
    queue WaitLine {
      capacity = 0
    }
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (value_literal
                    (integer)))))))))))

==================
Queue with large capacity
==================

model M {
  process P {
    queue Buffer { capacity = 50 }
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (value_literal
                    (integer)))))))))))

==================
Service with normal distribution
==================

model M {
  process P {
    service Machine {
      time = normal(10, 2)
    }
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (integer)
                      (integer))))))))))))

==================
Service with exponential distribution
==================

model M {
  process P {
    service Server {
      time = exponential(3)
    }
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (integer))))))))))))

==================
Service with constant distribution
==================

model M {
  process P {
    service Belt {
      time = constant(4)
    }
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (integer))))))))))))

==================
Process stages in declaration order
==================

model M {
  process P {
    source S { arrival = poisson(1) }
    queue Q { capacity = 2 }
    service V { time = constant(3) }
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (integer)))))))
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (value_literal
                    (integer))))))
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (integer))))))))))))

==================
Sink stage after service
==================

model M {
  process P {
    source S { arrival = poisson(1) }
    queue Q { capacity = 2 }
    service V { time = constant(3) }
    sink Done { }
  }
}
---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (declaration
        kind: (identifier)
        name: (identifier)
        body: (declaration_body
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (integer)))))))
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (value_literal
                    (integer))))))
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body
              (field
                name: (identifier)
                value: (value
                  (call
                    name: (identifier)
                    args: (argument_list
                      (integer)))))))
          (declaration
            kind: (identifier)
            name: (identifier)
            body: (declaration_body)))))))
